--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -94,7 +94,7 @@
 
 \fntext[ref3]{\url{heister@clemson.edu}, partially supported by the Computational Infrastructure in
 Geodynamics initiative (CIG), through the National Science Foundation under Award No. EAR-0949446 
-and The University of California—Davis, and National Science Foundation grant DMS1522191.}
+and The University of California-Davis, and National Science Foundation grant DMS1522191.}
 
 
 \address{}
