--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -111,7 +111,7 @@ schemes have been proposed in the literature to deal with these instabilities.
 Here we analyze the problem of creeping viscous flow with a free surface and discuss the 
 origin of these instabilities. We demonstrate their cause and how existing stabilization 
 schemes work to damp them out.
-We also propose a new scheme for removing instabilites from free surface calculations. 
+We also propose a new scheme for removing instabilities from free surface calculations. 
 It does not require modifications to the system matrix, nor additional variables, but is instead
 an explicit scheme based on nonstandard finite differences.  It relies on a single 
 stabilization parameter which may be identified with the smallest relaxation timescale of the
