--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -122,6 +122,10 @@ mantle convection software \texttt{ASPECT}.
 \end{abstract}
 
 \begin{keyword}
+Numerical modeling \sep
+Free surface \sep
+Mantle convection \sep
+Geodynamics
 %% keywords here, in the form: keyword \sep keyword
 
 %% PACS codes here, in the form: \PACS code \sep code
